2014-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (obj_print, obj_pprint): Render quasi-quote hash and
	vector literals using their original notation.

	* parser.y (unquotes_occur): Takes new argument, level. 
	Only finds quotes which are at the given quasiquoting level.
	Finally, this is the right semantics. In the first version of this
	function, we were not eager enough: we neglected to find unquotes
	that were wrapped in nested quasiquotes. Then we were too eager:
	finding any unquotes, even ones belonging to the inner backquotes.
	(vector, hash, choose_quote): Pass zero to unquotes_occur function.

2014-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (expand_qquote): Bugfix. Was not handling an unquote
	in the dotted position: (qquote x1 .. xn . (unquote form)),
	which looks like the structure (qquote x1 .. xn unquote form).
	Fixed by a hack: after recursively expanding the (unquote form)
	part (rest of the form), we check whether the unexpanded
	version has unquote at the front. If so, we know the expansion is just
	form, and use it to emit the suitable expansion.

2014-02-24  Kaz Kylheku  <kaz@kylheku.com>

	Symbol macros.

	* eval.c (top_smb, defsymacro_s, symacrolet_s): New global variables.
	(lookup_symac, get_opt_param_syms, get_param_syms, op_defsymacro,
	expand_symacrolet, make_var_shadowing_env): New static functions.
	(expand_tree_cases, expand_catch_clause): Install shadowing environment
	so lexical bindings hide any symbol macrolets.
	(expand_place): Fix neglect to expand an atomic form, which breaks
	symbol macros used as places.
	(expand): Expand symbol macros, expand symacrolet binding forms.
	Make sure symbol macros are shadowed in the lexical binding
	constructs. Take advantage of return value of rlcp_tree in a
	few places.
	(macro_form_p): Support for symbol macros; bugfix: not handling
	default argument.
	(macroexpand_1): Streamlined, and support added for symbol macros.
	(eval_init): Protect top_smb from gc. Create new hash, stored in